add scss variables, more components, SearchView RWD and first markup of DetailsView

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,7 +1,13 @@
+@import './src/styles/variables';
+
 .root {
   color: white;
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 700;
   white-space: nowrap;
-  margin-right: 2rem;
+
+  @media #{$tablet-768-up} {
+    margin-right: 2rem;
+    font-size: 2.4rem;
+  }
 }
