--- a/src/modules/TopBar/TopBar.module.scss
+++ b/src/modules/TopBar/TopBar.module.scss
@@ -1,25 +1,50 @@
+@import './src/styles/variables';
+
 .root {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   width: 100%;
   height: 10rem;
-  background-color: black;
+  background-color: $black;
+  padding-top: 1.5rem;
+
+  @media #{$tablet-768-up} {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .logo {
-  flex: 2;
-  position: relative;
-  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+
+  @media #{$tablet-768-up} {
+    flex: 2;
+    justify-content: flex-start;
+    margin-bottom: 0;
+  }
 }
 
 .search {
-  flex: 2;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media #{$tablet-768-up} {
+    flex: 2;
+  }
 }
 
 .navLinks {
-  flex: 2;
+  display: none;
+
+  @media #{$tablet-768-up} {
+    display: flex;
+    flex: 2;
+  }
 }
