--- a/src/views/App/App.module.scss
+++ b/src/views/App/App.module.scss
@@ -1,7 +1,10 @@
+@import './src/styles/variables';
+
 :global(html) {
   margin: 0;
   padding: 0;
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 :global(body) {
@@ -12,8 +15,16 @@
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
   overflow-y: scroll;
+}
+
+:global(a) {
+  color: currentColor;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 code {
@@ -28,41 +39,14 @@ code {
 }
 
 .container {
-  max-width: 95%;
+  max-width: calc(100% - 6rem);
   margin: 0 auto;
-}
 
-.logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .logo {
-    animation: logoSpin infinite 20s linear;
+  @media #{$tablet-768-up} {
+    max-width: 92%;
   }
-}
 
-.header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.link {
-  color: #61dafb;
-}
-
-@keyframes logoSpin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  @media #{$desktop-1024-up} {
+    max-width: 95%;
   }
 }
