--- a/src/views/App/App.module.scss
+++ b/src/views/App/App.module.scss
@@ -15,6 +15,7 @@
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
   overflow-y: scroll;
 }
 
