add MovieDetailsView with changes in props and styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $accent-color: #A244FF;
 $black: #000;
 $white: #fff;
 $grey: #676767;
+$dark-grey: #404040;
 
 $box-shadow-white-25: rgba(255,255,255,0.25);
 
