--- a/src/views/MovieDetailsView/MovieDetailsView.module.scss
+++ b/src/views/MovieDetailsView/MovieDetailsView.module.scss
@@ -2,26 +2,73 @@
 
 .root {
   color: $white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 1.6rem;
 }
 
 .topWrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  //background-color: $accent-color;
+  background-color: $dark-grey;
+  border-radius: 2.5rem;
+  padding: 3rem;
+
+  @media #{$tablet-768-up} {
+    flex-direction: row;
+    align-items: center;
+    padding: 4rem;
+  }
 }
 
 .details {
+  width: 100%;
+  margin-bottom: 4rem;
+
+  @media #{$tablet-768-up} {
+    min-width: 30vw;
+    max-width: 50vw;
+    height: 100%;
+    margin-bottom: 0;
+    padding-right: 5rem;
+  }
+}
+
+.posterContainer {
   flex: 1;
-  height: 100%;
-  //background-color: green;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+
+  @media #{$tablet-768-up} {
+    margin-bottom: 0;
+  }
+
+  @media #{$tablet-768-up} {
+    justify-content: flex-start;
+  }
+}
+
+.poster {
+  width: 100%;
+  border: 0.1rem solid $white;
+  box-shadow: 0 0.5rem 1rem $box-shadow-white-25;
+
+  @media #{$tablet-768-up} {
+    width: auto;
+  }
 }
 
 .year {
   font-size: 1.8rem;
 }
 
-.rating {
+.stars {
   color: $accent-color;
+  margin-top: 0.5rem;
 }
 
 .svg {
@@ -34,23 +81,78 @@
 }
 
 .title {
-  font-size: 4.8rem;
+  font-size: 2.4rem;
   font-weight: 700;
   text-transform: uppercase;
+
+  @media #{$tablet-768-up} {
+    font-size: 2.8rem;
+  }
+
+  @media #{$desktop-1024-up} {
+    font-size: 4.8rem;
+  }
 }
 
 .actors {
-  font-size: 1.6rem;
   margin-bottom: 1.5rem;
 }
 
-.posterContainer {
-  flex: 1;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  //background-color: orangered;
+.released {
+  color: $grey;
+  margin-top: 1rem;
 }
 
-.poster {
+.duration {
+  color: $grey;
+
+  > span {
+    color: lighten($accent-color, 10%);
+  }
+}
+
+.awards {
+  margin-bottom: 2rem;
+}
+
+.ratings {
+  display: flex;
+  flex-direction: column;
+
+  @media #{$tablet-768-up} {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+.rating {
+  display: flex;
+  flex-direction: column;
+  min-width: 18rem;
+  background-color: $dark-grey;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 0.8rem rgba(255, 255, 255, 0.15);
+  margin-bottom: 1rem;
+
+  @media #{$tablet-768-up} {
+    margin-right: 2rem;
+  }
+
+  &Value {
+    color: lighten($accent-color, 20%);
+  }
+
+  &Source {
+    color: $white;
+  }
+}
+
+.footer {
+  width: 100%;
+  padding: 2rem 0;
+  display: flex;
+  justify-content: center;
+  font-size: 1.6rem;
+  color: $grey;
 }
