--- a/src/views/SearchView/SearchView.module.scss
+++ b/src/views/SearchView/SearchView.module.scss
@@ -1,6 +1,22 @@
+@import './src/styles/variables';
+
 .root {
   width: 100%;
   min-height: 100vh;
   color: white;
   background-color: black;
+}
+
+.svg {
+  margin-bottom: 2rem;
+}
+
+.empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 1.6rem;
+  margin-top: 20vh;
+  color: $grey;
 }
