--- a/src/modules/TopBar/TopBar.module.scss
+++ b/src/modules/TopBar/TopBar.module.scss
@@ -36,6 +36,10 @@
   align-items: center;
 
   @media #{$tablet-768-up} {
+    flex: 4;
+  }
+
+  @media #{$desktop-1024-up} {
     flex: 2;
   }
 }
@@ -43,7 +47,7 @@
 .navLinks {
   display: none;
 
-  @media #{$tablet-768-up} {
+  @media #{$desktop-1024-up} {
     display: flex;
     flex: 2;
   }
